--- a/onlineshopping/src/main/webapp/WEB-INF/web.xml
+++ b/onlineshopping/src/main/webapp/WEB-INF/web.xml
@@ -10,11 +10,16 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<!-- For throwing Exception -->
 		<init-param>
-		<param-name>throwExceptionIfNoHandlerFound</param-name>
-		<param-value>true</param-value>
+			<param-name>throwExceptionIfNoHandlerFound</param-name>
+			<param-value>true</param-value>
 		</init-param>
-		</servlet>
-	
+		<multipart-config>
+			<max-file-size>20971452</max-file-size>
+			<max-request-size>4194304</max-request-size>
+			<file-size-threshold>1048576</file-size-threshold>
+		</multipart-config>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
