--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -50,6 +50,14 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+		<!-- Spring web flow -->
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.4.4.RELEASE</version>
+		</dependency>
+
+
 		<!-- JSTL -->
 		<dependency>
 			<groupId>jstl</groupId>
